# patina-dxe-core-qemu

./: Cargo.toml  Makefile.toml  README.md  cspell.yml  deny.toml  rust-toolchain.toml  rustfmt.toml
.azurepipelines/: PrGate.yml  Release.yml
.azurepipelines/templates/: Build.yml  Nuget.yml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: CiWorkflow.yml  ci-workflow.yml  label-issues.yml  label-sync.yml  publish-binaries.yml  update-release-draft.yml
.github/workflows/label-issues/: file-paths.yml  regex-pull-requests.yml
.nuget/: dxe_core_config.yaml  license.txt
NugetPublishing/: dxe_core_config.yaml  license.txt
src/: lib.rs  q35.rs
src/q35/: component.rs  registers.rs
src/q35/component/: service.rs
src/q35/component/service/: mm_config_provider.rs  mm_control.rs  mm_test.rs
