[package]
name = "qemu_dxe_core"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64"]

[[bin]]
name = "qemu_sbsa_dxe_core"
path = "bin/sbsa_dxe_core.rs"
required-features = ["aarch64"]

[dependencies]
adv_logger = { version = "11" }
dxe_core = { version = "11" }
log = { version = "^0.4", default-features = false, features = [
    "release_max_level_warn",
] }
sample_components = { version = "11" }
section_extractor = { version = "13" }
stacktrace = { version = "13" }
uefi_debugger = { version = "13" }
uefi_sdk = { version = "5" }

[profile.release]
debug = true

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0

[features]
default = []
x64 = []
aarch64 = []
