[package]
name = "qemu_dxe_core"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64"]

[[bin]]
name = "qemu_sbsa_dxe_core"
path = "bin/sbsa_dxe_core.rs"
required-features = ["aarch64"]

[dependencies]
adv_logger = {version = "13" }
dxe_core = { version = "13" }
log = { version = "^0.4", default-features = false, features = [
    "release_max_level_warn",
] }
sample_components = { version = "13" }
section_extractor = { version = "14" }
stacktrace = { version = "14" }
uefi_debugger = { version = "14" }
uefi_sdk = { version = "6" }

[profile.release]
debug = true

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0

[features]
default = []
x64 = []
aarch64 = []
